# fenicsx-shells

./: .flake8  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.local  README.md  build-image.sh  launch-container.sh  launch-notebook.sh  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: tests.yml
cpp/: CMakeLists.txt
demo/: .flake8  conftest.py  demo_kirchhoff-love-clamped.py  demo_nonlinear-naghdi-clamped-semicylinder.py  demo_nonlinear_naghdi_clamped_semicylinder.py  demo_reissner-mindlin-clamped-tdnns.py  demo_reissner-mindlin-clamped.py  demo_reissner-mindlin-simply-supported.py  test_demos.py
demo/documented/: .gitignore  setup.cfg
demo/documented/reissner-mindlin-clamped/: demo_reissner-mindlin-clamped.ipynb  demo_reissner-mindlin-clamped.py  test_mini.py
demo/documented/reissner-mindlin-clamped-projected/: demo_reissner-mindlin-clamped.py
demo/documented/reissner-mindlin-clamped-tdnns/: demo_reissner-mindlin-clamped-tdnns.ipynb
demo/undocumented/general-geometry-experiments/: tdc.py
doc/: README.md
doc/source/: conf.py  demos.rst  index.rst  jupytext_process.py
fenics_shellsx/: __init__.py
fenics_shellsx/cpp/: assembler.cpp  assembler.h  wrapper.cpp
fenicsx_shells/cpp/: wrapper.cpp
