[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fenicsx-shells"
version = "0.10.0.dev0"
description = "FEniCSx-Shells"
readme = "README.md"
requires-python = ">=3.9.0"
license = { file = "COPYING.LESSER" }
authors = [
      { email = "jack.hale@uni.lu" },
      { name = "Jack S. Hale" },
]
dependencies = [
      "fenics-dolfinx>=0.10.0.dev0,<0.11.0",
]

[project.optional-dependencies]
doc = ["myst_parser", "sphinx_rtd_theme", "sphinx"]
demo = []
test = ["pytest"]
lint = ["ruff"]
ci = [
    "dolfinx-external-operator[doc]",
    "dolfinx-external-operator[demo]",
    "dolfinx-external-operator[test]",
    "dolfinx-external-operator[lint]",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
      "E", # pycodestyle
      "W", # pycodestyle
      "F", # pyflakes
      "I",   # isort - use standalone isort
      "RUF", # Ruff-specific rules
      "UP",  # pyupgrade
      "ICN", # flake8-import-conventions
      "NPY", # numpy-specific rules
      "FLY", # use f-string not static joins
]
ignore = ["UP007", "RUF012"]
allowed-confusables = ["σ"]

[tool.ruff.lint.isort]
known-first-party = ["basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["gmsh", "numba", "numpy", "pytest", "pyvista"]
section-order = [
      "future",
      "standard-library",
      "mpi",
      "third-party",
      "first-party",
      "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
